Improve progress reporting in LoadRaw. Re #680.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -289,6 +289,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\RawFileInfo.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\RotateInstrumentComponent.cpp"
 				>
 			</File>
@@ -492,6 +496,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\MoveInstrumentComponent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\RawFileInfo.h"
 				>
 			</File>
 			<File
