Improving the excitation's group algorithms and the script that using them refs #769

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\DiagScriptInput.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\DiffractionFocussing.cpp"
 				>
 			</File>
@@ -562,6 +566,10 @@
 			</File>
 			<File
 				RelativePath=".\test\DetectorEfficiencyVariationTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\DiagScriptInput.h"
 				>
 			</File>
 			<File
