Slight alteration to Crystal SConscript to build only if there are things to do. Re #100

--- a/Code/Mantid/Crystal/SConscript
+++ b/Code/Mantid/Crystal/SConscript
@@ -6,6 +6,9 @@ import MantidBuild
 # GET LIST OF CPPS
 codeFolder = os.path.abspath('./src')
 listCpps = MantidBuild.getCPPFiles(codeFolder)
+if len(listCpps) == 0:
+   retval = {}
+   Return('retval')
 
 # Import environment
 Import('env')
