Adding a algorithm that sums the counts in the pixel rows or columns of a square SANS detector. Re #658.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -431,6 +431,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SumRowColumn.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SumSpectra.cpp"
 				>
 			</File>
@@ -882,6 +886,10 @@
 			</File>
 			<File
 				RelativePath=".\test\StripPeaksTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\SumRowColumn.h"
 				>
 			</File>
 			<File
