Finished first iteration of Ikeda Carpenter, including wiki and test on mock data.
Remaining:
	Implemented for now without derivative, and convergence seems to be a bit fragile in some instances (this is apparently not unexpected from conversation with Aziz) 
	For now assumed that ‘wavelength = 1’, i.e. this e.g. means alpha = 1/(alpha0+alpha1)
	Assume PV is 100% Guassian, need to add Lorentzian part to PV

To do:
        A few more test on stability e.g. to probe if some params are more difficult to refine  
  	Implement derivative, which may make this peakshape function more stable
	Implement ‘wavelength’ dependence on parameter. Before doing this make sure that the unit for wavelength in Mantid matches the wavelength unit used in the Fullprof manual
	Include test on a real data peak
	Add implementation of exponential integral function that takes complex argument and then add Lorentzian part to PV 

Desirable:
	Allow user to specify ‘wavelength’. That way this peak shape is not tied to data for which the wavelength at each data point is know

Refs #330.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -211,6 +211,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IkedaCarpenterPV1D.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Linear.cpp"
 				>
 			</File>
@@ -250,6 +254,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidCurveFitting\GaussianLinearBG1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\IkedaCarpenterPV1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\IkedaCarpenterPV1DTest.h"
 				>
 			</File>
 			<File
