Add an algorithm, ConvertSpectrumAxis, to change the spectrum axis (the one up the side in MantidPlot) to something else. Currently, the something else can be anything you like, so long as it's Theta (of the detector relating to that spectrum). Re #753

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -203,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ConvertSpectrumAxis.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ConvertToDistribution.cpp"
 				>
 			</File>
@@ -506,6 +510,10 @@
 			</File>
 			<File
 				RelativePath=".\test\ConvertFromDistributionTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\ConvertSpectrumAxis.h"
 				>
 			</File>
 			<File
