Added support for searching directories for a file. Implemented a FileProperty class that handles this for algorithm file properties. The algorithms don't use this yet. Also added ignore properties for the generated object files of the new Geometry directories. Re #767

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -8,6 +8,12 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 # Python API so that Mantid scripts can be imported more easily
 pythonscripts.directory = ../../PythonAPI/scripts
 
+# A semi-colon(;) separated list of directories to use to search for data
+datasearch.directories = 
+
+# A default directory to use for saving files
+defaultsave.directory = 
+
 #
 # ManagedWorkspace.LowerMemoryLimit sets the memory limit to trigger the use of 
 # a ManagedWorkspace. A ManagedWorkspace will be used for a workspace requiring greater amount of memory 
