Switched off the use of the CompressedWorkspace in the .properties file until the bug is fixed. re #847

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -28,6 +28,7 @@ ManagedWorkspace.LowerMemoryLimit = 90
 ManagedWorkspace.AlwaysInMemory = 0
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = ../temp
+CompressedWorkspace.DoNotUse = 1
 
 algorithms.retained = 50
 
