re #100 additional documentation notes added to properties file

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -1,7 +1,19 @@
-#framework configuration
+# File: Mantid Properties
+# Purpose: This file contains the basic configuration for Mantid.
+# WARNING: This file is not intended to be edited by users.
+#          If you wish to override any setting in this file
+#          Simply copy the entry into the Mantid.User.Properties file
+#          and set the value you desire there.  Any settings in the user.properties
+#          file will override those set in this file.
+#
+#          This File will be overwritten with each new version of Mantid, however
+#          we will never alter your user.properties file so settings there are safe.
+
+
+# where to find mantid plugin libraries
 plugins.directory = .
 
-#Where to load instrument definition files from
+# Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
 # The location of the scripts directory. This is added to the python path by the
@@ -9,12 +21,16 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 pythonscripts.directory = ../../PythonAPI/scripts
 
 # A semi-colon(;) separated list of directories to use to search for data
+# Use forward slash / for all paths
 datasearch.directories = 
 
 # A default directory to use for saving files
+# Use forward slash / for all paths
 defaultsave.directory = 
 
-#
+# The Number of algorithms properties to retain im memory for refence in scripts.
+algorithms.retained = 50
+
 # ManagedWorkspace.LowerMemoryLimit sets the memory limit to trigger the use of 
 # a ManagedWorkspace. A ManagedWorkspace will be used for a workspace requiring greater amount of memory 
 # than defined by LowerMemoryLimit. LowerMemoryLimit is a precentage of the physical memory available for
@@ -30,10 +46,10 @@ ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = ../temp
 CompressedWorkspace.DoNotUse = 1
 
-algorithms.retained = 50
 
 #Uncommenting the line below will enable algorithm chain re-running whenever a
 #workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
+#enabling this is currently discouraged as it could cause race conditions with python scripts
 #AlgorithmChaining.SwitchedOn = 1
 
 # logging configuration
