--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -271,6 +271,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FFTSmooth.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FindDeadDetectors.cpp"
 				>
 			</File>
@@ -614,6 +618,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\FFT.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\FFTSmooth.h"
 				>
 			</File>
 			<File
