Implemented complex Exponential Integral function based on expressions in Abramowitz and Stegun. Tested for a number of point in complex plane. Seem to perform pretty well. Refs #330.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -223,6 +223,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SpecialFunctionHelper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\UserFunction1D.cpp"
 				>
 			</File>
@@ -274,6 +278,14 @@
 			</File>
 			<File
 				RelativePath=".\test\Lorentzian1DTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\SpecialFunctionSupport.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\SpecialFunctionSupportTest.h"
 				>
 			</File>
 			<File
