--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -271,6 +271,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\RebinParamsValidator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SignalChannel.cpp"
 				>
 			</File>
@@ -502,6 +506,10 @@
 			</File>
 			<File
 				RelativePath=".\test\PropertyWithValueTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidKernel\RebinParamsValidator.h"
 				>
 			</File>
 			<File
