Updating UserAlgorithmTest in connection with changes made in previous commit to this ticket. Refs #963.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -300,6 +300,10 @@
 				RelativePath=".\inc\MantidCurveFitting\UserFunction1D.h"
 				>
 			</File>
+			<File
+				RelativePath=".\test\UserFunction1DTest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
