--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -217,6 +217,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IFunction.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IInstrument.cpp"
 				>
 			</File>
@@ -403,6 +407,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAPI\IFunction.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\IInstrument.h"
 				>
 			</File>
@@ -424,6 +432,10 @@
 			</File>
 			<File
 				RelativePath=".\test\InstrumentTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\IPeakFunction.h"
 				>
 			</File>
 			<File
