--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -203,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Gaussian.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Gaussian1D.cpp"
 				>
 			</File>
@@ -250,6 +254,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidCurveFitting\Fit1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\Gaussian.h"
 				>
 			</File>
 			<File
