LoadDetectorInfo is a new algorithm that adds information like gas pressure and offset times to the detector propertymap. Minor fixes for GroupDetectors and a the start of a script that will correct for detector efficiency variation refs #941 and #777 and #841

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -229,6 +229,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadDetectorInfo.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadEmptyInstrument.cpp"
 				>
 			</File>
@@ -408,6 +412,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\LoadDAE.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadDetectorInfo.h"
 				>
 			</File>
 			<File
