Add test to Gaussian. Refs #983

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -281,6 +281,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\GaussianTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidCurveFitting\IkedaCarpenterPV1D.h"
 				>
 			</File>
