re #986 Caching implmentted improves getpos speed by slightly over 50%

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -333,6 +333,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidKernel\Cache.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\CacheTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidKernel\ConfigService.h"
 				>
 			</File>
