--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -329,6 +329,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Instrument\ParComponentFactory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Instrument\ParDetector.cpp"
 				>
 			</File>
@@ -693,6 +697,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidGeometry\Instrument\ParComponentFactory.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidGeometry\Instrument\ParDetector.h"
 				>
 			</File>
@@ -753,11 +761,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Math\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\inc\MantidGeometry\Math\RotCounter.h"
 				>
 			</File>
 			<File
