Add an algorithm Q1D that amalgamates several steps in the SANS data reduction chain and adds the ability to do masking of time bins properly. Still some efficiency improvements that could go in, but it appears to work for now. The SANSReduction script now uses this. Re #755.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -387,6 +387,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Q1D.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Qxy.cpp"
 				>
 			</File>
@@ -810,6 +814,10 @@
 			</File>
 			<File
 				RelativePath=".\test\PowerLawCorrectionTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\Q1D.h"
 				>
 			</File>
 			<File
