Add quadratic IFunction with upper case file names. Refs #983

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -231,7 +231,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\src\quadratic.cpp"
+				RelativePath=".\src\Quadratic.cpp"
 				>
 			</File>
 			<File
@@ -309,7 +309,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidCurveFitting\quadratic.h"
+				RelativePath=".\inc\MantidCurveFitting\Quadratic.h"
 				>
 			</File>
 			<File
