Extended function API as described in ticket. Refs #994.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -423,11 +423,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAPI\IBackgroundFunction.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\IDataItem.h"
 				>
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\IFunction.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\IFunctionWithLocation.h"
 				>
 			</File>
 			<File
