Add Ikeda Carpenter satisfying IPeakFunction. Refs #983.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -219,6 +219,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IkedaCarpenterPV.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IkedaCarpenterPV1D.cpp"
 				>
 			</File>
