--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -111,6 +111,7 @@ install -m755 Code/qtiplot/qtiplot/MantidPlot $RPM_BUILD_ROOT/%{mantidbindir}/Ma
 for i in qtiplotrc.py qtiUtil.py mantidplotrc.py; do
     install -m755 Code/qtiplot/qtiplot/$i $RPM_BUILD_ROOT/%{mantidbindir}/$i
 done
+install -m755 Code/Mantid/PythonAPI/MantidFramework.py $RPM_BUILD_ROOT/%{mantidbindir}
 cp -r instrument/* $RPM_BUILD_ROOT/%{mantidinstrumentdir}
 cp -r Code/Mantid/PythonAPI/scripts/* $RPM_BUILD_ROOT/%{mantidscriptsdir}
 cp -r Images/* $RPM_BUILD_ROOT/%{mantidimagesdir}
