--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -309,7 +309,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\src\SaveFocussedXYE.cpp"
+				RelativePath=".\src\SaveFocusedXYE.cpp"
 				>
 			</File>
 			<File
