Added method asString() and std::string operator to IFunction which enables setting Function property of Fit algorithm with a function object or pointer. Renamed InputParameters property to Function in Fit. re #1003

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -277,11 +277,23 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\CompositeFunctionTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidCurveFitting\Fit.h"
 				>
 			</File>
 			<File
 				RelativePath=".\inc\MantidCurveFitting\Fit1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\FitTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\FunctionTest.h"
 				>
 			</File>
 			<File
