New algorithm GetEi calculates the kinetic energy of neutrons incident on the source. Remove excessive logging from Validators and LoadDetectorInfo. GetEi works by examining the monitor peaks but doesn't yet use any Gaussian curve fitting, it just finds three points based on their Y values. refs #943

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\DetectorEfficiencyCor.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\DetectorEfficiencyVariation.cpp"
 				>
 			</File>
@@ -304,6 +308,10 @@
 			</File>
 			<File
 				RelativePath=".\src\GetDetectorOffsets.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\GetEi.cpp"
 				>
 			</File>
 			<File
@@ -589,6 +597,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\DetectorEfficiencyCor.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\DetectorEfficiencyVariation.h"
 				>
 			</File>
@@ -682,6 +694,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\GetDetectorOffsets.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\GetEi.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\getEitest.h"
 				>
 			</File>
 			<File
