First implementation of constraint interface class and BoundaryConstraint. Refs #961.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -427,6 +427,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAPI\IConstraint.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\IDataItem.h"
 				>
 			</File>
